# apriltags

./: .gitignore  AprilTagsConfig.cmake.in  AprilTagsConfigVersion.cmake.in  CMakeLists.txt  README.md  apriltagsConfig.cmake.in
example/: CMakeLists.txt  apriltags_demo.cpp
include/apriltags/: Edge.h  Quad.h  TagDetection.h  TagDetectionUtils.h  TagDetector.h  TagFamily.h  Timer.h
src/: CMakeLists.txt  Edge.cc  Quad.cc  TagDetection.cc  TagDetectionUtils.cc  TagDetector.cc  TagDetector.cpp  TagFamily.cc
